* add: 搜索商品接口
