# app/services/goods/handler/goods.go
@@ -4,7 +4,9 @@ import (
 	"context"
 	"github.com/king-tu/mallweb/app/global"
 	"github.com/king-tu/mallweb/app/services/goods/proto/goods"
+	"github.com/olivere/elastic/v7"
 	"go.uber.org/zap"
+	"reflect"
 )
 
 type GoodsService struct{}
@@ -80,6 +82,43 @@ func (g *GoodsService) GetGoodsDetail(ctx context.Context, req *goods.GoodsDetai
 
 	resp.GoodsSku = &goodsSKU
 	resp.GoodsSkus = goodsSKUs
+
+	return nil
+}
+
+func (g *GoodsService) SearchGoods(ctx context.Context, req *goods.SearchGoodsRequest, resp *goods.SearchGoodsResponse) error {
+
+	client, err := elastic.NewClient(elastic.SetURL(global.Config.Elastic.Addr), elastic.SetBasicAuth(global.Config.Elastic.UserName, global.Config.Elastic.Password))
+	if err != nil {
+		global.Logger.For(ctx).Error(true, "创建elastic客户端失败", zap.Error(err))
+		return err
+	}
+
+	// Term搜索
+	termQuery := elastic.NewTermQuery("detail", req.GoodsName)
+
+	var goodsSKUIndexName = "goodsku_index"
+	searchResult, err := client.Search().
+		Index(goodsSKUIndexName).
+		Query(termQuery).
+		//Sort("id", true). // 按id升序排序
+		//From(0).Size(10). // 拿前10个结果
+		Pretty(true).
+		Do(ctx) // 执行
+	if err != nil {
+		global.Logger.For(ctx).Error(true, "搜索商品失败", zap.String("GoodName", req.GoodsName), zap.Error(err))
+		return err
+	}
+	total := searchResult.TotalHits()
+	zap.L().Sugar().Debugf("Found %d subjects\n", total)
+
+	if total > 0 {
+		for _, item := range searchResult.Each(reflect.TypeOf(goods.GoodsSku{})) {
+			if goodsSKU, ok := item.(*goods.GoodsSku); ok {
+				resp.GoodsSkus = append(resp.GoodsSkus, goodsSKU)
+			}
+		}
+	}
 
 	return nil
 }
